[package]
name = "primitives"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.210", features = ["derive"], default-features = false }
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false }
scale-info = { version = "2.11.3", default-features = false, features = ["derive"] }

sp-runtime = { git = "https://github.com/peaqnetwork/polkadot-sdk", branch = "peaq-polkadot-stable2407",default-features = false }
sp-std = { git = "https://github.com/peaqnetwork/polkadot-sdk", branch = "peaq-polkadot-stable2407", default-features = false }

zenlink-protocol = { path = "../../zenlink-protocol", default-features = false }


[features]
default = ["std"]
std = [
	"serde/std",
	"codec/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
	"zenlink-protocol/std"
]

runtime-benchmarks = []
