[package]
name = "zenlink-protocol-rpc"
version = "0.4.4"
authors = ["Zenlink Developers"]
edition = "2021"
license = "Apache 2.0"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

jsonrpsee = { version = "0.20.3", features = ["client-core", "server", "macros"] }

# Substrate packages

sp-blockchain = { git = "https://github.com/peaqnetwork/polkadot-sdk", default-features = false, branch = "peaq-polkadot-stable2407" }
sp-api = { git = "https://github.com/peaqnetwork/polkadot-sdk", default-features = false, branch = "peaq-polkadot-stable2407" }
sp-rpc = { git = "https://github.com/peaqnetwork/polkadot-sdk", default-features = false, branch = "peaq-polkadot-stable2407" }
sp-runtime = { git = "https://github.com/peaqnetwork/polkadot-sdk", default-features = false, branch = "peaq-polkadot-stable2407" }

# Local packages

zenlink-protocol = { path = "..", version = "0.4.0"}
zenlink-protocol-runtime-api = { path = "./runtime-api", version = "0.4.0"}
