[package]
name = "zenlink-stable-amm-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.119", features = ["derive"], optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }

jsonrpsee = { version = "0.16.2", features = ["client-core", "server", "macros"] }


sp-blockchain = { git = "https://github.com/peaqnetwork/polkadot-sdk", default-features = false, branch = "peaq-polkadot-stable2407" }
sp-api = { git = "https://github.com/peaqnetwork/polkadot-sdk", default-features = false, branch = "peaq-polkadot-stable2407" }
sp-rpc = { git = "https://github.com/peaqnetwork/polkadot-sdk", default-features = false, branch = "peaq-polkadot-stable2407" }
sp-runtime = { git = "https://github.com/peaqnetwork/polkadot-sdk", default-features = false, branch = "peaq-polkadot-stable2407" }

zenlink-stable-amm-runtime-api = { path = "./runtime-api", version = "0.1.0"}
