[package]
name = "zenlink-stable-amm-runtime-api"
version = "0.1.1"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false }
sp-api = { git = "https://github.com/peaqnetwork/polkadot-sdk", branch = "peaq-polkadot-stable2407", default-features = false }
sp-std = { git = "https://github.com/peaqnetwork/polkadot-sdk", default-features = false, branch = "peaq-polkadot-stable2407" }

zenlink-stable-amm = { path = '../..', default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-api/std",
    'sp-std/std',
    "zenlink-stable-amm/std",
]
